--- a/mov_rec/app/views/movies/index.html.erb
+++ b/mov_rec/app/views/movies/index.html.erb
@@ -4,7 +4,7 @@
 
 <body style="text-align: center">
 
-<h1 style="border-bottom: 2px solid black; padding-bottom: 10px">Listing Movies</h1>
+<h1 style="border-bottom: 2px solid black; padding-bottom: 10px">Movies</h1>
 
 
 <% if current_user.user_type_id == @admin.id  %>
