--- a/mov_rec/app/views/studios/index.html.erb
+++ b/mov_rec/app/views/studios/index.html.erb
@@ -4,7 +4,7 @@
 
 <body style="text-align: center">
 
-<h1 style="border-bottom: 2px solid black; padding-bottom: 10px">Listing Studios</h1>
+<h1 style="border-bottom: 2px solid black; padding-bottom: 10px">Studios</h1>
 
 <% if current_user.user_type_id == @admin.id  %>
   <%= link_to '- New Studio -', new_studio_path %>
