--- a/mov_rec/app/views/users/_form.html.erb
+++ b/mov_rec/app/views/users/_form.html.erb
@@ -22,9 +22,8 @@
     <%= f.label :password_confirmation %><br>
     <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-    <%= f.hidden_field :user_type_id, value: UserType.find_by(type_name: 'Member').id %>
+    <%= f.hidden_field :user_type_id, value: UserType.find_by(type_name: 'Member').id %><br />
     <%= f.submit "Log in", class: "btn btn-primary" %>
     </div>
 </div>
 <% end %>
-
