--- a/mov_rec/app/views/layouts/application.html.erb
+++ b/mov_rec/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MovRec</title>
+  <title>Press Play</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-default" style="position: fixed">
   <div class="container-fluid">
     <ul class="nav navbar-nav">
-      	<li class="active"><a href="/home">Movie Recommender</a></li>
+      	<li class="active"><a href="/home" style="font-size: 15px"><img src="http://onin.london/assets/PressPlay-logo-copy.png" style="width: 30px;">Press Play</a></li>
 
 	      	<li><a href="/users/<%= current_user.id %>">MY PROFILE</a></li>
 	      	<li><a href="/movies">MOVIES</a></li>
