--- a/mov_rec/app/views/movies/_form.html.erb
+++ b/mov_rec/app/views/movies/_form.html.erb
@@ -55,6 +55,16 @@
   </div>
 
   <div class="field">
+    <%= f.label :poster %><br>
+    <%= f.text_field :poster %>
+  </div>
+
+  <div class="field">
+    <%= f.label :trailer %><br>
+    <%= f.text_field :trailer %>
+  </div>
+
+  <div class="field">
     <%= f.label :genres %><br>
     <%= hidden_field_tag "movie[topic_ids][]", nil %>
 
