--- a/mov_rec/app/views/movies/_form.html.erb
+++ b/mov_rec/app/views/movies/_form.html.erb
@@ -65,6 +65,10 @@
   </div>
 
   <div class="field">
+  <%= link_to 'Add an Actor', new_movie_cast_path(:movie_id => @movie.id) %>
+  </div>
+
+  <div class="field">
     <%= f.label :genres %><br>
     <%= hidden_field_tag "movie[topic_ids][]", nil %>
 
