Last little changes

--- a/mov_rec/app/views/topics/index.html.erb
+++ b/mov_rec/app/views/topics/index.html.erb
@@ -2,7 +2,7 @@
 
 <% @admin = UserType.find_by type_name: 'Admin' %>
 
-<div style="width: 1000px; margin: auto; position: center; border-top: 2px black solid; text-align: center">
+<div style="width: 1000px; margin: auto; position: center; text-align: center">
 
 <h1 style="text-align: center; border-bottom: 2px black solid; padding-bottom: 10px">Genres</h1>
 
