--- a/mov_rec/app/views/movie_casts/_form.html.erb
+++ b/mov_rec/app/views/movie_casts/_form.html.erb
@@ -11,7 +11,28 @@
     </div>
   <% end %>
 
-   <div class="field">
+<table>
+  <thead>
+    <tr>
+      <th>Actor</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @movie_casts.each do |actor| %>
+      <tr>
+        <td><%= actor.actor.first_name %> <%= actor.actor.last_name %></td>
+        <td><%= link_to 'Destroy', actor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+<br>
+
+  <div class="field">
     <%= f.label :actor_id %><br>
     <%= f.collection_select :actor_id, Actor.order(:first_name),:id,:full_name, include_blank: true %>
   </div>
