--- a/mov_rec/app/views/movies/edit.html.erb
+++ b/mov_rec/app/views/movies/edit.html.erb
@@ -67,7 +67,7 @@
   </div>
 
   <div class="field">
-  <%= link_to 'Add an Actor', new_movie_cast_path(:movie_id => @movie.id) %>
+  <%= link_to 'Edit Actors', new_movie_cast_path(:movie_id => @movie.id) %>
   </div>
 
   <div class="field">
