jon fixed layout for login

--- a/mov_rec/app/assets/stylesheets/users.scss
+++ b/mov_rec/app/assets/stylesheets/users.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body.background {
+  background-image: url("https://wallpaperscraft.com/image/mountains_grass_top_view_beautifully_87319_1920x1080.jpg");
+}
