--- a/mov_rec/app/views/users/new.html.erb
+++ b/mov_rec/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
+<body class="background">
+
 <% provide(:title, "New User") %>
 <h1>New User</h1>
 
@@ -8,3 +10,5 @@
 <% else %>
 	<%= link_to 'Back', root_path %>
 <% end %>
+
+</body>
