--- a/mov_rec/app/views/layouts/application.html.erb
+++ b/mov_rec/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
 
 	<div class="content">
 		 <% flash.each do |message_type, message| %>
-        <div class="alert alert-<%= message_type %>"><%= message %></div>
+        	<div class="alert alert-<%= message_type %>"></div>
       	<% end %>
 
 		<%= yield %>
